src/test/ui/issues/issue-11515.stderr
error[E0308]: mismatched types
  --> $DIR/issue-11515.rs:9:33
   |
LL |     let test = box Test { func: closure };
   |                                 ^^^^^^^ expected trait `std::ops::FnMut`, found trait `std::ops::Fn`
   |
   = note: expected type `std::boxed::Box<(dyn std::ops::FnMut() + 'static)>`
              found type `std::boxed::Box<(dyn std::ops::Fn() + 'static)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
